--- a/src/styles/dark-mode.scss
+++ b/src/styles/dark-mode.scss
@@ -20,7 +20,7 @@
   color: var(--black-dark-theme-color);
 }
 
-.border-top-dark-theme {
+.border-top-dark-theme-p {
   width: 100%;
   border-top: 1px solid var(--color-black-pearl-100);
 }
