--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -402,7 +402,6 @@ select, textarea {
 }
 
 .compare-insurance-container h2 {
-  margin-top: 2rem;
   color: var(--color-green-pya-900);
 }
 
@@ -465,6 +464,7 @@ select, textarea {
   max-width: 1200px;
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
   align-items: center;
   gap: 3rem;
 }
@@ -795,7 +795,7 @@ select, textarea {
   color: var(--black-dark-theme-color);
 }
 
-.border-top-dark-theme {
+.border-top-dark-theme-p {
   width: 100%;
   border-top: 1px solid var(--color-black-pearl-100);
 }
