--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -125,7 +125,7 @@ p {
 .mobile-nav {
   position: fixed;
   left: 0;
-  top: 128px;
+  bottom: 60px;
   width: 100%;
   display: flex;
   flex-direction: column;
